Feb-04-2000 - Simon Hausman (v1.0.2)
  o Converted App::load method to use KURL instead of QString in kpart
    module
  o Used correct constructor for Part in kpart module
  o Used correct instance() in kpart module
  o Other random correctness fixes in kpart module
  o Added +[URL] command line option in kpart module

Feb-04-2000 - Simon Hausman (v1.0.1)
  o Fixed memory leak in plugin module
  o Use createObject instead of old create in plugin module
  o Added version number to xml file in plugin module
  o Fixed integration of configure.in.in in kdesdk

Feb-04-2000 - Kurt Granroth (v1.0)
  o GIGANTIC REWRITE.  This was *almost* a complete rewrite from
    scratch
  o Made entire system much more modular allowing for future
    frameworks to be easily added
  o Added module to create a full KParts application
  o Added module to create a KPart plugin
  o Added module to create an autoconf/automake framework for existing
    source code
  o Added more command-line options to speed up creation of projects
  o Dropped knewclass and knewfunction as they were next to useless

Dec-10-2000 - Kurt Granroth (v0.7.5)
  o Finally fixed --noinit for real
  o kapptemplate no longer needs to be in your $PATH

Nov-20-2000 - Kurt Granroth (v0.7.4)
  o Added custom menu item and menu as example on how to do it
  o Fixed some --noinit bugs

Oct-27-2000 - Stephan Kulow (v0.7.3)
  o Fixed pot file handling.  'make package-messages' should now work.

Oct-14-2000 - Malte Starostik (v0.7.2)
  o Added --help option
  o Added option to not run ./configure on newly created project

Sep-26-2000 - Kurt Granroth (v0.7.1)
  o Added hooks for more KAboutData information
  o Now building moc files as moc.cpp instead of #including them

Jul-21-2000 - Kurt Granroth (v0.7)
  o Now using an HTML KPart component instead of a widget since that
    is The Right Thing to Do(tm)
  o Renamed .png files to use sizes in the names

Jun-09-2000 - Kurt Granroth (v0.6.3)